--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "json-server": "^1.0.0-beta.3",
     "leaflet": "^1.9.4",
     "tailwindcss": "^4.1.14",
     "vue": "^3.5.22",
