--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "json-server": "^1.0.0-beta.3",
     "leaflet": "^1.9.4",
+    "quill": "^2.0.3",
     "tailwindcss": "^4.1.14",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
