--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "json-server": "^1.0.0-beta.3",
     "leaflet": "^1.9.4",
+    "multer": "^2.0.2",
     "quill": "^2.0.3",
     "tailwindcss": "^4.1.14",
     "vue": "^3.5.22",
